Improves css for dropdowns

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,8 @@ label {
 input[type="text"],
 input[type="email"],
 input[type="number"],
-input[type="date"] {
+input[type="date"],
+select {
   display: block;
   width: 400px;
   padding: 6px 12px;
